--- a/GoogleDirectionMap/WebContent/index.html
+++ b/GoogleDirectionMap/WebContent/index.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script type="text/javascript"
-	src="http://maps.google.se/maps/api/js?key=AIzaSyCQofoHTSXKDRK2A3Fl9ySnfkI1ssp-TD0"></script>
+	src="http://maps.google.se/maps/api/js?key=PUT_YOUR_API_KEY"></script>
 <script type="text/javascript">
 	var directionDisplay, map;
 	var directionsService = new google.maps.DirectionsService();
